--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,14 +1,32 @@
-{
+
     // Use IntelliSense to learn about possible attributes.
     // Hover to view descriptions of existing attributes.
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
     {
-        "name": "C#: <project-name> Debug",
-        "type": "dotnet",
-        "request": "launch",
-        "projectPath": "${workspaceFolder}/<relative-path-to-project-folder><project-name>.csproj"
+        "version": "0.2.0",
+        "compounds": [
+            {
+                "name": "Run API and Frontend",
+                "configurations": ["Launch API", "Launch Frontend"]
+            }
+        ],
+        "configurations": [
+            {
+                "name": "Launch API",
+                "type": "coreclr",
+                "request": "launch",
+                "preLaunchTask": "build",
+                "program": "${workspaceFolder}/ProductsApi",
+                "cwd": "${workspaceFolder}/ProductsApi",
+                "stopAtEntry": false
+            },
+            {
+                "name": "Launch Frontend",
+                "type": "node",
+                "request": "launch",
+                "cwd": "${workspaceFolder}/frontend",
+                "runtimeExecutable": "python3",
+                "runtimeArgs": ["-m", "http.server", "5000"]
+            }
+        ]
     }
-    ]
-}
